malplotlib의 fontmanager와 rc를 사용하여 한글 폰트를 설정하고, rcParams를 통해 마이너스 기호 깨짐 방지

--- a/시각화에서_한글_지원.md
+++ b/시각화에서_한글_지원.md
@@ -4,7 +4,7 @@
 from matplotlib import font_manager, rc
 ```
 
-차트 내 한글 표시
+차트 내 한글 표시 방법. font_manager와 rc 사용
 
 ```python
 font_name = font_manager.FontProperties(fname="C:/Windows/Fonts/MalangmalangR.ttf").get_name()
