이미지 수정

--- a/Visualizing/지도로_차트_그리기.md
+++ b/Visualizing/지도로_차트_그리기.md
@@ -18,7 +18,9 @@ df_tmp = df_oil[df_oil['시도'] == '서울특별시']
 df_tmp
 ```
 
-![img][./img/0404_df_tmp.png]
+![map_img][./img/0404_df_tmp.png]
+
+
 
 구별 주유소 평균 가격을 df로 만들자. 평소에는 `groupby` 함수를 사용했으나, 이번에는 판다스의 `pivot_table`을 사용하여 만들 것이다.
 
@@ -29,7 +31,9 @@ pivot_df = pd.pivot_table(df_tmp, index = ['시군구'], values = ['가격'], ag
 pivot_df
 ```
 
-![img][./img/0404_pivot_df.png]
+![map_img][./img/0404_pivot_df.png]
+
+
 
 지금은 ['시군구']를 기준으로 정렬되어있기 때문에, 가격을 기준으로 내림차순 정렬한다.
 
@@ -37,7 +41,9 @@ pivot_df
 pivot_df.sort_values('가격', ascending = False)
 ```
 
-![img][./img/0404_df_tmp_sort.png]
+![map_img][./img/0404_df_tmp_sort.png]
+
+
 
 #### 한국(서울시) 지역정보 JSON 읽어오기. 
 
@@ -84,4 +90,5 @@ map.choropleth(geo_data = geo_str,
 map
 ```
 
-![img][./img/0404_map.png]
+![map_img][./img/0404_map.png]
+
