이미지 출력 오류 수정

--- a/Visualizing/지도로_차트_그리기.md
+++ b/Visualizing/지도로_차트_그리기.md
@@ -18,9 +18,7 @@ df_tmp = df_oil[df_oil['시도'] == '서울특별시']
 df_tmp
 ```
 
-![map_img][./img/0404_df_tmp.png]
-
-
+<img src = './img/0404_df_tmp.png'>
 
 구별 주유소 평균 가격을 df로 만들자. 평소에는 `groupby` 함수를 사용했으나, 이번에는 판다스의 `pivot_table`을 사용하여 만들 것이다.
 
@@ -31,7 +29,7 @@ pivot_df = pd.pivot_table(df_tmp, index = ['시군구'], values = ['가격'], ag
 pivot_df
 ```
 
-![map_img][./img/0404_pivot_df.png]
+<img src = './img/0404_pivot_df.png'>
 
 
 
@@ -41,7 +39,7 @@ pivot_df
 pivot_df.sort_values('가격', ascending = False)
 ```
 
-![map_img][./img/0404_df_tmp_sort.png]
+<img src = './img/0404_df_tmp_sort.png'>
 
 
 
@@ -90,5 +88,4 @@ map.choropleth(geo_data = geo_str,
 map
 ```
 
-![map_img][./img/0404_map.png]
-
+<img src = './img/0404_map.png'>
