Set3-2, Set5 추가
독립성 검정 -> 카이제곱 검정, 의사결정 나무

--- a/review/ProDS-Set1~Set5.ipynb
+++ b/review/ProDS-Set1~Set5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "ce6f9d5f",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,7 @@
     "import numpy as np\n",
     "import scipy.stats as st\n",
     "from statsmodels.formula.api import ols\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "path = 'C:/Users/sujin/multi/[특강]ProDS/Dataset/'"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -748,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 2,
    "id": "654574d8",
    "metadata": {},
    "outputs": [
@@ -842,7 +840,7 @@
        "2          1                          1    Male  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 3,
    "id": "6cdceb98",
    "metadata": {},
    "outputs": [
@@ -865,7 +863,7 @@
        "3"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 16,
    "id": "71952032",
    "metadata": {
     "scrolled": true
@@ -902,98 +900,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function ttest_1samp in module scipy.stats.stats:\n",
-      "\n",
-      "ttest_1samp(a, popmean, axis=0, nan_policy='propagate', alternative='two-sided')\n",
-      "    Calculate the T-test for the mean of ONE group of scores.\n",
-      "    \n",
-      "    This is a two-sided test for the null hypothesis that the expected value\n",
-      "    (mean) of a sample of independent observations `a` is equal to the given\n",
-      "    population mean, `popmean`.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    a : array_like\n",
-      "        Sample observation.\n",
-      "    popmean : float or array_like\n",
-      "        Expected value in null hypothesis. If array_like, then it must have the\n",
-      "        same shape as `a` excluding the axis dimension.\n",
-      "    axis : int or None, optional\n",
-      "        Axis along which to compute test; default is 0. If None, compute over\n",
-      "        the whole array `a`.\n",
-      "    nan_policy : {'propagate', 'raise', 'omit'}, optional\n",
-      "        Defines how to handle when input contains nan.\n",
-      "        The following options are available (default is 'propagate'):\n",
-      "    \n",
-      "          * 'propagate': returns nan\n",
-      "          * 'raise': throws an error\n",
-      "          * 'omit': performs the calculations ignoring nan values\n",
-      "    alternative : {'two-sided', 'less', 'greater'}, optional\n",
-      "        Defines the alternative hypothesis.\n",
-      "        The following options are available (default is 'two-sided'):\n",
-      "    \n",
-      "          * 'two-sided'\n",
-      "          * 'less': one-sided\n",
-      "          * 'greater': one-sided\n",
-      "    \n",
-      "        .. versionadded:: 1.6.0\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    statistic : float or array\n",
-      "        t-statistic.\n",
-      "    pvalue : float or array\n",
-      "        Two-sided p-value.\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> from scipy import stats\n",
-      "    >>> rng = np.random.default_rng()\n",
-      "    >>> rvs = stats.norm.rvs(loc=5, scale=10, size=(50, 2), random_state=rng)\n",
-      "    \n",
-      "    Test if mean of random sample is equal to true mean, and different mean.\n",
-      "    We reject the null hypothesis in the second case and don't reject it in\n",
-      "    the first case.\n",
-      "    \n",
-      "    >>> stats.ttest_1samp(rvs, 5.0)\n",
-      "    Ttest_1sampResult(statistic=array([-2.09794637, -1.75977004]), pvalue=array([0.04108952, 0.08468867]))\n",
-      "    >>> stats.ttest_1samp(rvs, 0.0)\n",
-      "    Ttest_1sampResult(statistic=array([1.64495065, 1.62095307]), pvalue=array([0.10638103, 0.11144602]))\n",
-      "    \n",
-      "    Examples using axis and non-scalar dimension for population mean.\n",
-      "    \n",
-      "    >>> result = stats.ttest_1samp(rvs, [5.0, 0.0])\n",
-      "    >>> result.statistic\n",
-      "    array([-2.09794637,  1.62095307])\n",
-      "    >>> result.pvalue\n",
-      "    array([0.04108952, 0.11144602])\n",
-      "    \n",
-      "    >>> result = stats.ttest_1samp(rvs.T, [5.0, 0.0], axis=1)\n",
-      "    >>> result.statistic\n",
-      "    array([-2.09794637,  1.62095307])\n",
-      "    >>> result.pvalue\n",
-      "    array([0.04108952, 0.11144602])\n",
-      "    \n",
-      "    >>> result = stats.ttest_1samp(rvs, [[5.0], [0.0]])\n",
-      "    >>> result.statistic\n",
-      "    array([[-2.09794637, -1.75977004],\n",
-      "           [ 1.64495065,  1.62095307]])\n",
-      "    >>> result.pvalue\n",
-      "    array([[0.04108952, 0.08468867],\n",
-      "           [0.10638103, 0.11144602]])\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [267]\u001b[0m, in \u001b[0;36m<cell line: 13>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m q2 \u001b[38;5;241m=\u001b[39m q1[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgender\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mforehead_ratio\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m     12\u001b[0m help(ttest_1samp)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mttest_rel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq2\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgender\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq2\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mforehead_ratio\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\kdig\\lib\\site-packages\\scipy\\stats\\stats.py:6453\u001b[0m, in \u001b[0;36mttest_rel\u001b[1;34m(a, b, axis, nan_policy, alternative)\u001b[0m\n\u001b[0;32m   6450\u001b[0m n \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mshape[axis]\n\u001b[0;32m   6451\u001b[0m df \u001b[38;5;241m=\u001b[39m n \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m-> 6453\u001b[0m d \u001b[38;5;241m=\u001b[39m (\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat64)\n\u001b[0;32m   6454\u001b[0m v \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mvar(d, axis, ddof\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m   6455\u001b[0m dm \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(d, axis)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'float'"
+      "2.997, Y\n"
      ]
     }
    ],
@@ -1006,11 +913,20 @@
     "# - 신뢰수준 99%에서 양측 검정을 수행하고 결과는 귀무가설 기각의 경우 Y로, 그렇지\n",
     "# 않을 경우 N으로 답하시오. (답안 예시) 1.234, Y\n",
     "# =============================================================================\n",
-    "# from scipy.stats import ttest_rel, ttest_1samp\n",
+    "from scipy.stats import ttest_rel\n",
     "\n",
-    "# q2 = q1[['gender', 'forehead_ratio']]\n",
-    "# help(ttest_1samp)\n",
-    "# ttest_rel(q2['gender'], q2['forehead_ratio'])"
+    "q2 = q1[['gender', 'forehead_ratio']]\n",
+    "M = q2[q2['gender']=='Male'].dropna()\n",
+    "F = q2[q2['gender']=='Female'].dropna()[:-1]\n",
+    "# print(M.shape, F.shape)\n",
+    "\n",
+    "# help(ttest_rel)\n",
+    "out = ttest_rel(M['forehead_ratio'], F['forehead_ratio'])\n",
+    "if out[1] < 0.005:\n",
+    "    h1 = \"Y\"\n",
+    "else:\n",
+    "    h1 = 'N'\n",
+    "print(f'{round(out[0], 3)}, {h1}')"
    ]
   },
   {
@@ -1522,14 +1438,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "35246648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ID', 'Age', 'Age_gr', 'Gender', 'Work_Experience', 'Family_Size',\n",
+      "       'Ever_Married', 'Graduated', 'Profession', 'Spending_Score', 'Var_1',\n",
+      "       'Segmentation'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Age_gr</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Work_Experience</th>\n",
+       "      <th>Family_Size</th>\n",
+       "      <th>Ever_Married</th>\n",
+       "      <th>Graduated</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>Spending_Score</th>\n",
+       "      <th>Var_1</th>\n",
+       "      <th>Segmentation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>462809</td>\n",
+       "      <td>22</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>462643</td>\n",
+       "      <td>38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>466315</td>\n",
+       "      <td>67</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID  Age  Age_gr  Gender  Work_Experience  Family_Size  Ever_Married  \\\n",
+       "0  462809   22      30       1              1.0          4.0             1   \n",
+       "1  462643   38      40       0              NaN          3.0             2   \n",
+       "2  466315   67      70       0              1.0          1.0             2   \n",
+       "\n",
+       "   Graduated  Profession  Spending_Score  Var_1 Segmentation  \n",
+       "0          1           6               2      4          NaN  \n",
+       "1          2           3               0      4            A  \n",
+       "2          2           3               2      6          NaN  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df4 = pd.read_csv(path+'DataSet_04.csv')\n",
-    "print(df4.columns)\n",
-    "df4.head(3)"
+    "df5 = pd.read_csv(path+'DataSet_05.csv')\n",
+    "print(df5.columns)\n",
+    "df5.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "70d33e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1166"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# =============================================================================\n",
+    "# 1.위의 표에 표시된 데이터 타입에 맞도록 전처리를 수행하였을 때, 데이터 파일 내에\n",
+    "# 존재하는 결측값은 모두 몇 개인가? 숫자형 데이터와 문자열 데이터의 결측값을\n",
+    "# 모두 더하여 답하시오.\n",
+    "# (String 타입 변수의 경우 White Space(Blank)를 결측으로 처리한다) (답안 예시) 123\n",
+    "# =============================================================================\n",
+    "\n",
+    "df5.isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "fa695b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0031, Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =============================================================================\n",
+    "# 2.이어지는 분석을 위해 결측값을 모두 삭제한다. 그리고, 성별이 세분화(Segmentation)에\n",
+    "# 영향을 미치는지 독립성 검정을 수행한다. 수행 결과, p-value를 반올림하여 소수점\n",
+    "# 넷째 자리까지 쓰고, 귀무가설을 기각하면 Y로, 기각할 수 없으면 N으로 기술하시오. \n",
+    "# (답안 예시) 0.2345, N\n",
+    "# =============================================================================\n",
+    "# 결측값 삭제\n",
+    "df5 = df5.dropna()\n",
+    "\n",
+    "q2 = df5.copy()\n",
+    "# 독립성 검정 -> 카이제곱 검정\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "tab = pd.crosstab(index=q2['Gender'], columns=q2['Segmentation'])\n",
+    "out = chi2_contingency(tab)\n",
+    "\n",
+    "if out[1] < 0.05:\n",
+    "    res2 = 'Y'\n",
+    "else:\n",
+    "    res2 = 'N'\n",
+    "\n",
+    "print(f'{round(out[1], 4)}, {res2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3eba27f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =============================================================================\n",
+    "# 3.Segmentation 값이 A 또는 D인 데이터만 사용하여 의사결정 나무 기법으로 분류\n",
+    "# 정확도를\n",
+    "# 측정해 본다. \n",
+    "# - 결측치가 포함된 행은 제거한 후 진행하시오.\n",
+    "# - Train대 Test 7대3으로 데이터를 분리한다. (Seed = 123)\n",
+    "# - Train 데이터를 사용하여 의사결정나무 학습을 수행하고, Test 데이터로 평가를\n",
+    "# 수행한다.\n",
+    "# - 의사결정나무 학습 시, 다음과 같이 설정하시오:\n",
+    "# • Feature: Age_gr, Gender, Work_Experience, Family_Size, \n",
+    "#             Ever_Married, Graduated, Spending_Score\n",
+    "# • Label : Segmentation\n",
+    "# • Parameter : Gini / Max Depth = 7 / Seed = 123\n",
+    "# 이 때 전체 정확도(Accuracy)를 소수점 셋째 자리 이하는 버리고 소수점 둘째자리까지\n",
+    "# 기술하시오.\n",
+    "# (답안 예시) 0.12\n",
+    "# =============================================================================\n",
+    "q3 = df5[(df5['Segmentation']=='A')|(df5['Segmentation']=='D')]\n",
+    "X = q3[['Age_gr', 'Gender', 'Work_Experience', 'Family_Size', \n",
+    "        'Ever_Married', 'Graduated', 'Spending_Score']]\n",
+    "y = q3[['Segmentation']]\n",
+    "seed = 123\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=seed\n",
+    ")\n",
+    "\n",
+    "# 의사결정나무\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# help(DecisionTreeClassifier)\n",
+    "dtc = DecisionTreeClassifier(random_state=seed, max_depth=7).fit(X_train, y_train)\n",
+    "predr = dtc.predict(X_test)\n",
+    "\n",
+    "# 그냥 이렇게 간단하게 하면 됨!\n",
+    "res3 = dtc.score(X_test, y_test)\n",
+    "print(np.floor(res3*100)/100)"
    ]
   }
  ],
