--- a/review/ProDS_Set6~Set10.ipynb
+++ b/review/ProDS_Set6~Set10.ipynb
@@ -12,9 +12,7 @@
     "import numpy as np\n",
     "import scipy.stats as st\n",
     "from statsmodels.formula.api import ols\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "path = 'C:/Users/sujin/multi/[특강]ProDS/Dataset/'"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -1104,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "id": "b467ccea",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1194,7 @@
        "4     pop            73         3074  106880                1   5700"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,64 +1207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 39,
    "id": "271aac22",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>km/day</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>model</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>lounge</th>\n",
-       "      <td>36.965169</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pop</th>\n",
-       "      <td>36.271773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sport</th>\n",
-       "      <td>36.832096</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           km/day\n",
-       "model            \n",
-       "lounge  36.965169\n",
-       "pop     36.271773\n",
-       "sport   36.832096"
+       "km/day    0.98\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,36 +1236,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "683d7a1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.48], N\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
-    "# 2.운행 일수에 대한 운행 거리를 산출하고, 위 1번 문제에서 가장 큰 값을 가지고 있던\n",
-    "# 모델과 가장 낮은 값을 가지고 있던 모델 간의 운행 일수 대비 운행거리 평균이 다른지\n",
-    "# 적절한 통계 검정을 수행하고 p-value를 소수점 세자리 이하는 버리고 소수점\n",
-    "# 두자리까지 기술하고 기각 여부를 Y / N로 답하시오. (등분산을 가정하고 equal_var = \n",
-    "# True / var.equal = T로 분석을 실행하시오.)\n",
-    "# (답안 예시) 0.23, Y\n",
-    "# ============================================================================="
+    "# 2. O\n",
+    "# =============================================================================\n",
+    "# lounge, pop\n",
+    "q2 = df10.copy()\n",
+    "q2['km/day'] = q2['km']/q2['age_in_days']\n",
+    "\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "lounge = q2[q2['model']==tab['km/day'].idxmax()][['km/day']].dropna()\n",
+    "pop = q2[q2['model']==tab['km/day'].idxmin()][['km/day']].dropna()\n",
+    "\n",
+    "out = ttest_ind(lounge, pop, equal_var=True)\n",
+    "\n",
+    "if out[1] < 0.05:\n",
+    "    res = 'Y'\n",
+    "else:\n",
+    "    res = 'N'\n",
+    "print(f'{np.floor(out[1]*100)/100}, {res}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "5b5270b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10469\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
-    "# 3.독립변수로 engine_power, age_in_days, km를 사용하고 종속변수로 price를 사용하여\n",
-    "# 모델별 선형회귀분석을 수행하고, 산출된 모형을 사용하여 다음과 같은 조건의\n",
-    "# 중고차에 대한 가격을 예측하고 예측된 가격을 정수부만 기술하시오.\n",
-    "# - model : pop / engine_power : 51 / age_in_days : 400 / km : 9500 / previous_owners : 2\n",
+    "# 3. X\n",
+    "# =============================================================================\n",
+    "X = df10[['engine_power', 'age_in_days', 'km']]\n",
+    "y = df10[['price']]\n",
     "\n",
-    "# (답안 예시) 12345\n",
-    "# ============================================================================="
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lr = LinearRegression().fit(X, y)\n",
+    "res3 = lr.predict([[51, 400, 9500]])\n",
+    "print(f'{np.floor(res3)[0][0]:.0f}')"
    ]
   }
  ],
